--- a/views/Product/cart.ejs
+++ b/views/Product/cart.ejs
@@ -19,10 +19,11 @@
     <main class="homeMainSection">
 
         
-
-        <div class="cartMainSection">
+        <form method="POST" action="/placeOrder" class="cartMainSection">
+       
 
         <div class="cartSectionBox1">
+            
             <div class="shoppingCartText"><h2>Shopping Cart</h2><span class="itemsNumberInCart"><%=totalCartProducts%> items</span></div>
 
             <table class="cartTable">
@@ -36,7 +37,7 @@
 
                 <tbody>
                     <% for(product of products) {%>
-
+                    <input type="hidden" name="productId[]" value="<%=product.productId%>">
                     <tr class="shoppingProductDetails">
                         <td class="cartTableProductDetails">
                         <div class="cartProductDetails">
@@ -85,6 +86,7 @@
 
         <div class="cartSectionBox2">
 
+            
             <h2>Order Summary</h2>
 
             <hr>
@@ -100,6 +102,7 @@
                 <button class="changeAddressBtn">Change</button>
             </div>
 
+            
             <div class="changeAddressBox" style="display: none">
                 <a href="/product/address" class="addNewAddress">Add address</a>
             </div>
@@ -132,12 +135,14 @@
                 <p>Total Amount</p>
                 <p>$<%=totalPrice%></p>
             </div>
-
+            
+            
             <button class="placeOrderBtn paymentBtns">Place Order</button>
 
             <button class="onlinePaymentBtn paymentBtns" style="display: none;">Proceed to Pay</button>
+            </form>
 
-        </div>
+
 
         </div>
 
