Add total price, each product price, date of order features in Database

--- a/views/Product/cart.ejs
+++ b/views/Product/cart.ejs
@@ -109,9 +109,9 @@
 
             <p class="cartSectionBox2Titles">PAYMENT METHOD</p>
 
-            <select class="paymentMethod">
-                <option class="paymentSelectOptions">Cash On Delivery</option>
-                <option class="paymentSelectOptions">Online Payment</option>
+            <select class="paymentMethod" name="paymentMethod">
+                <option class="paymentSelectOptions" value="COD">Cash On Delivery</option>
+                <option class="paymentSelectOptions" value="Online">Online Payment</option>
             </select>
 
             <hr>
