Create order page

--- a/views/Seller/seller.ejs
+++ b/views/Seller/seller.ejs
@@ -96,7 +96,7 @@
             </div>
 
             <div class="opt2Box optBox">
-                <p class="allProductText">All Product</p>
+                <h2 class="allProductText">All Product</h2>
                 <br>
                 <div class="allProducts">
                     <table>
@@ -145,7 +145,34 @@
             </div>
 
             <div class="opt3Box optBox">
-                <h3>Opt 3 Selected</h3>
+                <h2 class="orderHeading">Orders List</h2>
+                <div class="orderBox">
+                        <p class="orderId">Order Id: 4353467354523543</p>
+                        <div class="order">
+                                <div class="orderIconImage">
+                                    <img src="https://greencart-gs.vercel.app/assets/box_icon-eJIAYJwb.svg" >
+                                </div>
+                                <div class="orderProducts">
+                                    <p>Wheat 500g <span class="orderProductQuantity"> &nbsp; x 1</span></p>
+                                    <p>Fruit 1kg <span class="orderProductQuantity"> &nbsp; x 1</span></p>
+                                    <p>Tomato 2kg <span class="orderProductQuantity"> &nbsp; x 1</span></p>
+                                    <p>Carrot 500g <span class="orderProductQuantity"> &nbsp; x 1</span></p>
+                                </div>
+                                <div class="orderAddress">
+                                    <p class="orderUserName">Abdul Kabeer</p>
+                                    <p class="orderUserAddress">Near Shikarpur road physical hostel IBA Sukkur, Naushahro Feroze, Sukkur, 67050,
+                                    Pakistan</p>                    
+                                </div>
+                                <div class="totalOrderPrice">
+                                    <p>$720</p>
+                                </div>
+                                <div class="orderDetails">
+                                    <p>Method: <span class="orderMethod">COD</span></p>
+                                    <p>Date: <span class="orderDate">7/8/2025</span></p>
+                                    <p>Payment: <span class="orderPayment">Pending</span></p>
+                                </div>
+                        </div>
+                </div>
             </div>
         </div>
 
