--- a/public/css/sellerStyle.css
+++ b/public/css/sellerStyle.css
@@ -207,9 +207,13 @@ table .product{
     aspect-ratio: 1/1;
 }
 
-.allProductText{
-    font-size: 22px;
-    font-weight: 800;
+
+
+.allProductText, .orderHeading{
+    font-size: 19px;
+    font-weight: 600;
+    padding: 0;
+    margin: 0 0 15px 0;
 }
 
 /* Turn on off button */
@@ -233,6 +237,77 @@ table .product{
     right: 0.28vw;
 }
 
+/* Option 3 styling */
+.orderBox{
+    width: 82%;
+    height: auto;
+}
+.orderBox .order{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: 0.5px solid #6a7282a2;
+    border-radius: 10px;
+    padding: 10px 12px;
+    margin-top: 8px;
+    margin-bottom: 5px;
+}
+
+.order .orderIconImage{
+    width:11%;
+}
+
+.orderIconImage img{
+    width: 67%;
+}
+
+.order .orderProducts{
+    width: 24%;
+}
+
+.orderProducts p{
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.orderProducts .orderProductQuantity{
+    color:#4fbf8b;
+    font-weight: bold;
+}
+
+.order p{
+    margin: 5px;
+}
+
+.order .orderAddress{
+    width: 38%;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+}
+
+.orderUserName{
+    font-weight: bold;
+}
+
+.order .totalOrderPrice{
+    width: 13%;
+    font-weight: bold;
+}
+
+.totalOrderPrice p{
+    font-size: 17px;
+}
+
+.order .orderDetails{
+    width: 15%;
+}
+
+.orderBox .orderId{
+    color: #6a7282a2;
+    font-weight: 600;
+    margin: 15px 0 0 0;
+}
 
 /* Hover effects */
 .opt:hover{
