--- a/views/Product/order.ejs
+++ b/views/Product/order.ejs
@@ -22,7 +22,7 @@
             
                 <thead>
                     <tr>
-                        <td class="orderIdCol">Order Id: <%=orderId%></td>
+                        <td class="orderIdCol">Order Id: <%=orderId[0]%></td>
                         <td class="paymentCol">Payment: <%=orders[0].paymentMethod%></td>
                         <td class="amountCol">Total Amount: $<%=orderTotalPrice%></td>
                     </tr>
