--- a/views/Product/Products.ejs
+++ b/views/Product/Products.ejs
@@ -79,6 +79,12 @@
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/vy1xa7zovcu22smzapzv.png">
                             <p class="bestSellingProductType">Bakery</p>
                             <p class="bestSellingProductName">Brown Bread 400g</p>
+                            <div class="reviewBox">
+                                <%for(let i=0; i<4; i++) {%>
+                                    <span> <i class="fa-solid fa-star fa-sm" style="color: #4fbf8b;"></i> </span>
+                                <%}%>
+                                <span> <i class="fa-regular fa-star fa-sm" style="color: #4fbf8b;"> </i></span>
+                            </div>
                             <div class="price-and-btn">
 
                                 <div class="price">
@@ -96,6 +102,12 @@
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/cxrrgnf12xuhkr4dyhi2.png">
                             <p class="bestSellingProductType">Grain</p>
                             <p class="bestSellingProductName">Organic Quina 5..</p>
+                            <div class="reviewBox">
+                                <%for(let i=0; i<4; i++) {%>
+                                    <span> <i class="fa-solid fa-star fa-sm" style="color: #4fbf8b;"></i> </span>
+                                <%}%>
+                                <span> <i class="fa-regular fa-star fa-sm" style="color: #4fbf8b;"> </i></span>
+                            </div>
                             <div class="price-and-btn">
 
                                 <div class="price">
@@ -114,6 +126,12 @@
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/ceqgisupuizyste9aifg.png">
                             <p class="bestSellingProductType">Vegetables</p>
                             <p class="bestSellingProductName">Carrot 500g</p>
+                            <div class="reviewBox">
+                                <%for(let i=0; i<4; i++) {%>
+                                    <span> <i class="fa-solid fa-star fa-sm" style="color: #4fbf8b;"></i> </span>
+                                <%}%>
+                                <span> <i class="fa-regular fa-star fa-sm" style="color: #4fbf8b;"> </i></span>
+                            </div>
                             <div class="price-and-btn">
 
                                 <div class="price">
@@ -132,6 +150,12 @@
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/pjt1y6xdo46tluemhf0o.png">
                             <p class="bestSellingProductType">Fruits</p>
                             <p class="bestSellingProductName">Apple 1kg</p>
+                            <div class="reviewBox">
+                                <%for(let i=0; i<4; i++) {%>
+                                    <span> <i class="fa-solid fa-star fa-sm" style="color: #4fbf8b;"></i> </span>
+                                <%}%>
+                                <span> <i class="fa-regular fa-star fa-sm" style="color: #4fbf8b;"> </i></span>
+                            </div>
                             <div class="price-and-btn">
 
                                 <div class="price">
@@ -150,6 +174,12 @@
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/gek3mmiig3lixlkpxks8.png">
                             <p class="bestSellingProductType">Dairy</p>
                             <p class="bestSellingProductName">Cheese 200g</p>
+                            <div class="reviewBox">
+                                <%for(let i=0; i<4; i++) {%>
+                                    <span> <i class="fa-solid fa-star fa-sm" style="color: #4fbf8b;"></i> </span>
+                                <%}%>
+                                <span> <i class="fa-regular fa-star fa-sm" style="color: #4fbf8b;"> </i></span>
+                            </div>
                             <div class="price-and-btn">
 
                                 <div class="price">
