--- a/views/Seller/seller.ejs
+++ b/views/Seller/seller.ejs
@@ -13,6 +13,8 @@
 <body>
     <%-include('../includes/sellerHeader.ejs')%>
 
+    <%-include('../includes/flash.ejs')%>
+
     <div class="mainBox">
 
         <div class="leftBox">
