--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -194,7 +194,7 @@
 
         <div class="navLinks-searchBar">
             <div class="navLinks">
-                <a href="/seller"  class="sellerLink">Seller Dashboard</a>
+                <a href="/seller/login"  class="sellerLink">Seller Dashboard</a>
                 <a href="/product" class="headerLinks">Home</a>
                 <a href="/product/all" class="headerLinks">All Products</a>
             </div>
